[package]
name = "pohts"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
chrono = "0.4"
rand = "0.8"
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.4"
lazy_static = "1.4.0"


[[bin]]
name = "poh"
path = "main.rs"
